Divide user and pets routers
