# app.js
@@ -1,34 +1,36 @@
-const express = require("express");
-const logger = require("morgan");
-const cors = require("cors");
-require("dotenv").config();
-const swaggerUi = require("swagger-ui-express");
-const swaggerDocument = require("./swagger.json");
+const express = require('express');
+const logger = require('morgan');
+const cors = require('cors');
+require('dotenv').config();
+const swaggerUi = require('swagger-ui-express');
+const swaggerDocument = require('./swagger.json');
 
-const authRouter = require("./routes/api/auth");
-const newsRouter = require("./routes/api/news");
-const noticesRouter = require("./routes/api/notices");
-const userRouter = require("./routes/api/user");
-const servicesRouter = require("./routes/api/services")
+const authRouter = require('./routes/api/auth');
+const newsRouter = require('./routes/api/news');
+const noticesRouter = require('./routes/api/notices');
+const userRouter = require('./routes/api/user');
+const servicesRouter = require('./routes/api/services');
+const petsRouter = require('./routes/api/pets');
 
 const app = express();
 
-const formatsLogger = app.get("env") === "development" ? "dev" : "short";
+const formatsLogger = app.get('env') === 'development' ? 'dev' : 'short';
 
 app.use(logger(formatsLogger));
 app.use(cors());
 app.use(express.json());
-app.use(express.static("public"));
-app.use("/api-docs", swaggerUi.serve, swaggerUi.setup(swaggerDocument));
+app.use(express.static('public'));
+app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 
-app.use("/api/notices", noticesRouter);
-app.use("/api/auth", authRouter);
-app.use("/api/news", newsRouter);
-app.use("/api/user", userRouter);
-app.use("/api/services", servicesRouter);
+app.use('/api/notices', noticesRouter);
+app.use('/api/auth', authRouter);
+app.use('/api/news', newsRouter);
+app.use('/api/user', userRouter);
+app.use('/api/pets', petsRouter);
+app.use('/api/services', servicesRouter);
 
 app.use((req, res) => {
-  res.status(404).json({ message: "Not found" });
+  res.status(404).json({ message: 'Not found' });
 });
 
 app.use((err, req, res, next) => {
