# controllers/index.js
@@ -1,9 +1,11 @@
 const controllerUser = require('./auth');
 const controllerNotices = require('./notices');
-const controllerPet = require('./user');
+const controllerPet = require('./pets');
+const controllerUserData = require('./user');
 
 module.exports = {
   controllerUser,
   controllerNotices,
   controllerPet,
+  controllerUserData,
 };
